Fix text align to center

--- a/src/components/SlidingDigit.css
+++ b/src/components/SlidingDigit.css
@@ -39,6 +39,7 @@
   display: block;
   width: 100%;
   height: 1em;
+  text-align: center;
 }
 
 .sliding-digit__current {
